--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,10 @@ numpy>=1.24.0
 ultralytics>=8.0.0
 pandas>=2.0.0
 pyyaml>=6.0
+# MMDetection and dependencies
+mmdet>=3.0.0
+mmengine>=0.8.0
+mmcv>=2.0.0
+torch>=1.13.0
+torchvision>=0.14.0
 
